--- a/static/css/all.css
+++ b/static/css/all.css
@@ -79,7 +79,8 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
+    background-color: rgb(255, 250, 250);
     margin: 0;
     overflow-x: hidden;
 }
