--- a/static/css/header.css
+++ b/static/css/header.css
@@ -18,7 +18,8 @@
 }
 
 #header_wrap #header_box {
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
+    background-color: rgba(200, 0, 20, 0.03);
     display: flex;
     width: 100%;
     height: 70px;
@@ -161,7 +162,8 @@
     height: 100%;
     min-height: calc(100vh - 70px);
     z-index: 99;
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
+    background-color: rgb(255, 250, 250);
     /* position: absolute; */
     /* top: 70px; */
     top: 0;
@@ -178,7 +180,8 @@
     /* position: relative; */
     /* top: 140px; */
     padding: 15px;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
+    font-size: 1.3rem;
 }
 
 #menu_wrap #menu_box #menu_list .menu_list_item {
@@ -196,7 +199,8 @@
 }
 
 #menu_wrap #menu_box #menu_list .menu_list_item>a>h2 {
-    font-size: 2.3rem;
+    /* font-size: 2.3rem; */
+    font-size: 2rem;
     color: rgba(0, 0, 0, 0.5);
 }
 
