--- a/static/css/header.css
+++ b/static/css/header.css
@@ -19,7 +19,8 @@
 
 #header_wrap #header_box {
     /* background-color: rgb(240, 240, 240); */
-    background-color: rgba(200, 0, 20, 0.03);
+    /* background-color: rgba(200, 0, 20, 0.03); */
+    background-color: rgb(255, 250, 250);
     display: flex;
     width: 100%;
     height: 70px;
