--- a/static/css/main.css
+++ b/static/css/main.css
@@ -397,6 +397,7 @@
     padding-top: 5px;
     letter-spacing: 0.1rem;
     font-weight: 100;
+    color: rgb(160, 30, 50);
 }
 
 #map .mapboxgl-popup-content p {
