--- a/static/css/main.css
+++ b/static/css/main.css
@@ -266,19 +266,19 @@
 #detail_wrap #detail_box #detail_work ul li {
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     border-radius: 5px; */
-    border-top: 2px solid rgba(200, 0, 20, 0.5);
-    border-bottom: 2px solid rgba(200, 0, 20, 0.5);
+    border-top: 2px solid rgba(160, 30, 50, 0.5);
+    border-bottom: 2px solid rgba(160, 30, 50, 0.5);
     position: relative;
     /* padding: 24px; */
-    padding: 14px 24px;
-    margin: 24px;
+    padding: 14px 40px;
+    margin: 24px 0;
 }
 #detail_wrap #detail_box #detail_img ul li::before,
 #detail_wrap #detail_box #detail_work ul li::before,
 #detail_wrap #detail_box #detail_img ul li::after,
 #detail_wrap #detail_box #detail_work ul li::after {
     content: '';
-    background-color: rgba(200, 0, 20, 0.5);
+    background-color: rgba(160, 30, 50, 0.5);
     top: -14px;
     bottom: -14px;
     left: 12px;
