--- a/static/css/main.css
+++ b/static/css/main.css
@@ -255,7 +255,8 @@
 
 #detail_wrap #detail_box #detail_img ul li .attached_img_tag,
 #detail_wrap #detail_box #detail_work ul li .attached_work_tag {
-    padding: 10px 25px 25px 25px;
+    /* padding: 10px 25px 25px 25px; */
+    padding: 10px 15px 25px 15px;
 }
 
 #detail_wrap #detail_box #detail_work ul li .attached_work_tag .attached_work_cont img {
