--- a/static/css/main.css
+++ b/static/css/main.css
@@ -79,7 +79,8 @@
     height: calc(100vh - 70px);
     /* position: absolute; */
     top: 70px;
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
+    background-color: rgb(255, 250, 250);
     /* background-color: #777; */
     left: 0;
     /* z-index: -5; */
