--- a/static/css/header.css
+++ b/static/css/header.css
@@ -37,11 +37,15 @@
     /* border-bottom: 20px solid;
     border-image-source: linear-gradient(180deg, rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 0) 99%, rgba(0, 0, 0, 0.01) 98.5%, rgb(255,255,255) 99.3%, rgba(0,0,0, 0.08) 99.9%, rgba(0,0,0, 0) 100%);
     border-image-slice: 1; */
-    border-bottom: 10px solid;
+
+
+    /* border-bottom: 10px solid;
     -webkit-border-image: url(../img/intaglio_line.png);
     -moz-border-image: url(../img/intaglio_line.png);
     border-image: url(../img/intaglio_line.png);
-    border-image-slice: 30;
+    border-image-slice: 30; */
+
+    border-bottom: 2px solid rgba(160, 30, 50, 0.5);
 }
 
 
