--- a/static/css/header.css
+++ b/static/css/header.css
@@ -115,8 +115,10 @@
 } */
 
 #header_wrap #header_box #header_box_area #header_btn a #menu_btn img {
-    width: 40px;
-    top: 15px;
+    /* width: 40px; */
+    width: 20px;
+    /* top: 15px; */
+    top: 18px;
     position: relative;
 }
 
