--- a/static/css/main.css
+++ b/static/css/main.css
@@ -391,7 +391,7 @@
     font-weight: 600;
     opacity: 0.7;
     line-height: 1.7rem;
-    color: rgb(160, 30, 50);
+    /* color: rgb(160, 30, 50); */
 }
 
 #map .mapboxgl-popup-content h4 {
