--- a/static/css/main.css
+++ b/static/css/main.css
@@ -238,8 +238,11 @@
 #detail_wrap #detail_box #detail_img ul li img,
 #detail_wrap #detail_box #detail_work ul li img,
 #detail_wrap #detail_box #detail_ref ul li img {
-    width: 100%;
-    max-width: 596px;
+    max-width: 100%;
+    /* max-width: 596px; */
+    max-height: 400px;
+    width: auto;
+    height: auto;
     /* margin-top: 15px; */
     /* margin-bottom: 10px; */
     /* border-radius: 5px 5px 0 0; */
@@ -256,6 +259,7 @@
     /* font-size: 1.7rem; */
     font-size: 1.2rem;
     margin-bottom: 30px;
+    text-align: left !important;
 }
 
 #detail_wrap #detail_box #detail_img ul li .attached_img_tag,
@@ -278,6 +282,7 @@
     /* padding: 24px; */
     padding: 14px 40px;
     margin: 24px 0;
+    text-align: center;
 }
 #detail_wrap #detail_box #detail_img ul li::before,
 #detail_wrap #detail_box #detail_work ul li::before,
