--- a/static/css/header.css
+++ b/static/css/header.css
@@ -115,11 +115,17 @@
 } */
 
 #header_wrap #header_box #header_box_area #header_btn a #menu_btn img {
-    /* width: 40px; */
-    width: 20px;
+    width: 30px;
+    /* width: 20px; */
     /* top: 15px; */
-    top: 18px;
+    top: 15px;
     position: relative;
+    border-radius: 15px;
+    /* background-color: white; */
+    padding: 5px;
+}
+#header_wrap #header_box #header_box_area #header_btn a #menu_btn img:hover {
+    background-color: rgba(160, 30, 50, 0.2);
 }
 
 #header_wrap #header_box #header_box_area #header_btn a #menu_btn .menu_o {
