--- a/static/css/header.css
+++ b/static/css/header.css
@@ -279,7 +279,7 @@
     cursor: pointer;
 }
 
-#place_list_wrap #place_list #place_ul .place_li .place_title:hover {
+#place_list_wrap #place_list #place_ul .place_title:hover {
     color: rgba(160, 30, 50, 0.6);
     font-weight: 900;
 }
