--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 
+
+@keyframes expand {
+    from {
+      transform: scale(0);
+      opacity: 0;
+      background: black;
+    }
+  }
+  
 /****front****/
 
 #front_wrap * {
