--- a/static/css/main.css
+++ b/static/css/main.css
@@ -301,10 +301,14 @@
     margin: 24px 0;
     text-align: center;
 }
-#detail_wrap #detail_box #detail_img ul li::before,
+
+/* #detail_wrap #detail_box #detail_img ul li::before,
 #detail_wrap #detail_box #detail_work ul li::before,
 #detail_wrap #detail_box #detail_img ul li::after,
-#detail_wrap #detail_box #detail_work ul li::after {
+#detail_wrap #detail_box #detail_work ul li::after  */
+
+#detail_wrap #detail_box #detail_img ul li::before,
+#detail_wrap #detail_box #detail_work ul li::before {
     /* content: '';
     background-color: rgba(160, 30, 50, 0.5);
     top: -14px;
@@ -316,15 +320,15 @@
     position: absolute;
     bottom: 0;
     height: 1px;
-    width: 24%;
+    width: 200px;
     border-bottom: 1px solid rgba(160, 30, 50, 0.5);
 }
 
-#detail_wrap #detail_box #detail_img ul li::after,
+/* #detail_wrap #detail_box #detail_img ul li::after,
 #detail_wrap #detail_box #detail_work ul li::after {
     left: auto;
     right: 12px;
-}
+} */
 
 #detail_wrap #detail_box #detail_work ul li .attached_work_tag,
 #detail_wrap #detail_box #detail_ref ul li .attached_ref_tag {
