--- a/static/css/main.css
+++ b/static/css/main.css
@@ -273,7 +273,8 @@
     font-family: "Yeon Sung";
     /* font-size: 1.7rem; */
     font-size: 1.2rem;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
+    margin-bottom: 10px;
     text-align: left !important;
 }
 
@@ -298,7 +299,8 @@
     position: relative;
     /* padding: 24px; */
     padding: 14px 40px;
-    margin: 24px 0;
+    /* margin: 24px 0; */
+    margin: 30px 0;
     text-align: center;
 }
 
@@ -320,7 +322,9 @@
     position: absolute;
     bottom: 0;
     height: 1px;
-    width: 200px;
+    left: calc(50% - 50px);
+    box-shadow: 0 2px 2px 0 rgba(160, 30, 50, 0.3);
+    width: 100px;
     border-bottom: 1px solid rgba(160, 30, 50, 0.5);
 }
 
