--- a/static/css/main.css
+++ b/static/css/main.css
@@ -328,6 +328,19 @@
     border-bottom: 2px solid rgba(160, 30, 50, 0.5);
 }
 
+#detail_wrap #detail_box #detail_img ul li::before:last-of-type,
+#detail_wrap #detail_box #detail_work ul li::before:last-of-type {
+    
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 0;
+    left: calc(50% - 50px);
+    box-shadow: none;
+    width: 0;
+    border-bottom: none;
+}
+
 /* #detail_wrap #detail_box #detail_img ul li::after,
 #detail_wrap #detail_box #detail_work ul li::after {
     left: auto;
