--- a/static/css/main.css
+++ b/static/css/main.css
@@ -328,14 +328,14 @@
     border-bottom: 2px solid rgba(160, 30, 50, 0.5);
 }
 
-#detail_wrap #detail_box #detail_img ul li::before:last-of-type,
-#detail_wrap #detail_box #detail_work ul li::before:last-of-type {
+#detail_wrap #detail_box #detail_img ul li:last-child::before,
+#detail_wrap #detail_box #detail_work ul li:last-child::before {
     
     content: "";
     position: absolute;
     bottom: 0;
     height: 0;
-    left: calc(50% - 50px);
+    /* left: calc(50% - 50px); */
     box-shadow: none;
     width: 0;
     border-bottom: none;
