--- a/static/css/header.css
+++ b/static/css/header.css
@@ -282,4 +282,5 @@
 #place_list_wrap #place_list #place_ul .place_title:hover {
     color: rgba(160, 30, 50, 0.6);
     font-weight: 900;
+    text-decoration: underline;
 }
