--- a/static/css/header.css
+++ b/static/css/header.css
@@ -170,6 +170,14 @@
     z-index: 99;
 }
 
+@keyframes slide_down {
+    from {
+      transform: scale(0);
+      opacity: 0;
+      background: black;
+    }
+  }
+
 #menu_wrap {
     width: 100%;
     height: 100%;
@@ -182,7 +190,11 @@
     top: 0;
     left: 0;
     margin-top: 140px;
+
     /* display: none; */
+
+    transition: all 0.5s ease 0s;
+    animation: 0.5s ease-in-out 0s 1 normal none running slide_down;
 }
 
 #menu_wrap #menu_box {
