--- a/static/css/main.css
+++ b/static/css/main.css
@@ -488,6 +488,13 @@
     -ms-filter: grayscale(0.3) opacity(0.8) drop-shadow(0px 0px 0px rgb(255, 30, 0)) contrast(1.1) brightness(1.0);
     filter: grayscale(0.3) opacity(0.8) drop-shadow(0px 0px 0px rgb(255, 30, 0)) contrast(1.1) brightness(1.0);
 } */
+.marker {
+    filter: drop-shadow(rgb(150, 150, 150) 1px 1px 0px) drop-shadow(rgb(150, 150, 150) -1px -1px 0px);
+    -webkit-filter: drop-shadow(rgb(150, 150, 150) 1px 1px 0px) drop-shadow(rgb(150, 150, 150) -1px -1px 0px);
+    -moz-filter: drop-shadow(rgb(150, 150, 150) 1px 1px 0px) drop-shadow(rgb(150, 150, 150) -1px -1px 0px);
+    -o-filter: drop-shadow(rgb(150, 150, 150) 1px 1px 0px) drop-shadow(rgb(150, 150, 150) -1px -1px 0px);
+    -ms-filter: drop-shadow(rgb(150, 150, 150) 1px 1px 0px) drop-shadow(rgb(150, 150, 150) -1px -1px 0px);
+}
 
 
 /****footer****/
