--- a/static/css/header.css
+++ b/static/css/header.css
@@ -218,7 +218,7 @@
 
     transition: all 0.5s ease 0s;
     /* animation: 0.5s ease-in-out 0s 1 normal none running slide_down; */
-    animation: slide_down 300ms;
+    animation: slide_down 300ms ease;
 }
 
 #menu_wrap #menu_box {
