--- a/static/css/header.css
+++ b/static/css/header.css
@@ -203,7 +203,8 @@
 
 #menu_wrap {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 0px;
     min-height: calc(100vh - 70px);
     z-index: 99;
     /* background-color: rgb(240, 240, 240); */
@@ -216,9 +217,17 @@
 
     /* display: none; */
 
-    transition: all 0.5s ease 0s;
+    /* transition: all 0.5s ease 0s; */
     /* animation: 0.5s ease-in-out 0s 1 normal none running slide_down; */
-    animation: slide_down 300ms ease;
+    /* animation: slide_down 300ms ease; */
+
+    -webkit-transition: height 0.5s linear;
+       -moz-transition: height 0.5s linear;
+        -ms-transition: height 0.5s linear;
+         -o-transition: height 0.5s linear;
+            transition: height 0.5s linear;
+
+
 }
 
 #menu_wrap #menu_box {
