--- a/static/css/header.css
+++ b/static/css/header.css
@@ -209,7 +209,7 @@
     z-index: 99;
     /* background-color: rgb(240, 240, 240); */
     background-color: rgb(255, 245, 245);
-    /* position: absolute; */
+    position: absolute;
     /* top: 70px; */
     top: 0;
     left: 0;
