--- a/static/css/header.css
+++ b/static/css/header.css
@@ -213,7 +213,8 @@
     /* top: 70px; */
     top: 0;
     left: 0;
-    margin-top: 140px;
+    /* margin-top: 140px; */
+    padding-top: 140px;
 
     /* display: none; */
 
