--- a/static/css/header.css
+++ b/static/css/header.css
@@ -203,8 +203,8 @@
 
 #menu_wrap {
     width: 100%;
-    /* height: 100%; */
-    height: 0px;
+    height: 100%;
+    /* height: 0px; */
     min-height: calc(100vh - 70px);
     z-index: 99;
     /* background-color: rgb(240, 240, 240); */
