--- a/static/css/main.css
+++ b/static/css/main.css
@@ -501,7 +501,13 @@
 
 
 /****footer****/
-
+footer {
+    position: fixed;
+    display: flex;
+    width: 200px;
+    bottom: 0;
+    left: calc(50% - 100px);
+}
 #footer_wrap {
     /* position: fixed; */
     bottom: 0;
