--- a/static/css/header.css
+++ b/static/css/header.css
@@ -205,7 +205,7 @@ header {
     width: 100%;
     height: 100%;
     /* height: 0px; */
-    min-height: calc(100vh - 70px);
+    /* min-height: calc(100vh - 70px); */
     z-index: 99;
     /* background-color: rgb(240, 240, 240); */
     background-color: rgb(255, 245, 245);
@@ -223,12 +223,12 @@ header {
     /* animation: 0.5s ease-in-out 0s 1 normal none running slide_down; */
     /* animation: slide_down 300ms ease; */
 
-    -webkit-transition: 300ms;
+    /* -webkit-transition: 300ms;
        -moz-transition: 300ms;
         -ms-transition: 300ms;
          -o-transition: 300ms;
             transition: 300ms;
-    animation: slide_up 300ms;
+    animation: slide_up 300ms; */
 
 
 }
