--- a/static/css/header.css
+++ b/static/css/header.css
@@ -220,7 +220,7 @@ header {
     /* display: none; */
 
     transition: all 0.5s ease 0s;
-    animation: 0.5s ease-in-out 0s 1 normal none running expand;
+    animation: 0.5s ease-in-out 0s 1 normal none running slide_down;
     /* animation: slide_down 300ms ease; */
 
     /* -webkit-transition: 300ms;
