--- a/static/css/header.css
+++ b/static/css/header.css
@@ -313,7 +313,7 @@ header {
 #place_list_wrap #place_list {
     /* text-indent: 1rem; */
     color: #555;
-
+    position: absolute;
     transition: all 0.5s ease 0s;
     animation: 0.5s ease-in-out 0s 1 normal none running slide_down;
 }
