--- a/static/css/header.css
+++ b/static/css/header.css
@@ -194,7 +194,7 @@ header {
 
 @keyframes slide_up {
     0% {
-        top: 100%;
+        top: 100vh;
     }
     100% {
         top: 0px;
@@ -313,7 +313,7 @@ header {
 #place_list_wrap #place_list {
     /* text-indent: 1rem; */
     color: #555;
-    position: absolute;
+    position: relative;
     transition: all 0.5s ease 0s;
     animation: 0.5s ease-in-out 0s 1 normal none running slide_up;
 }
