--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,7 +11,8 @@
 
 /****front****/
 #index_body {
-    background: url('https://cdd-ddc.org/static/img/index_bg_line.svg');
+    /* background: url('https://cdd-ddc.org/static/img/index_bg_space.svg') no-repeat center center / cover; */
+    background: url('https://cdd-ddc.org/static/img/index_bg_space.svg') repeat;
 }
 #front_wrap * {
     z-index: 999;
