index modify and add header imgs

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -121,8 +121,7 @@ header {
     /* top: 15px; */
     top: 15px;
     position: relative;
-    border-radius: 15px;
-    /* background-color: white; */
+    /* border-radius: 15px; */
     padding: 5px;
     transition: 300ms;
 }
