--- a/static/css/all.css
+++ b/static/css/all.css
@@ -73,7 +73,8 @@ body {
     position: relative;
     font-size: 1.5rem;
     /* font-family: '또박또박', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
-    font-family: 'Yeon Sung', cursive;
+    /* font-family: 'Yeon Sung', cursive; */
+    font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
