header logo position

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,12 +44,15 @@
     top: 0;
     transition: all 3000ms ease;
 }
+.header_logo_letter.left,
 .front_msg_letter.left {
     right: 100%;
 }
+.header_logo_letter.center,
 .front_msg_letter.center {
     right: 50%;
 }
+.header_logo_letter.right,
 .front_msg_letter.right {
     right: 0;
 }
