--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,6 +44,20 @@
     top: 0;
     transition: all 3000ms ease;
 }
+
+.header_logo {
+    position: absolute;
+    left: 45%;
+    width: 20vw;
+    height: 40px;
+    cursor: pointer;
+}
+.header_logo_letter {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    transition: all 3000ms ease;
+}
 .header_logo_letter.left,
 .front_msg_letter.left {
     right: 100%;
