--- a/static/css/all.css
+++ b/static/css/all.css
@@ -20,6 +20,11 @@
 }
 
 @font-face {
+    font-family: "제주명조";
+    src: url('../../fonts/JejuMyeongjo.woff'), url('../../fonts/JejuMyeongjo.ttf');
+}
+
+@font-face {
     font-family: 'GyeonggiBatang';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiBatang.woff') format('woff');
     font-weight: normal;
@@ -74,7 +79,7 @@ body {
     font-size: 1.5rem;
     /* font-family: '또박또박', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
     /* font-family: 'Yeon Sung', cursive; */
-    font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
+    font-family: '제주명조', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
