--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,9 +29,9 @@
     font-size: 1rem;
 }
 
-/* .lang_btn {
+.lang_btn {
     display: none;
-} */
+}
 .lang_btn_label {
     color: rgb(230, 130, 140);
     font-weight: 100;
