--- a/static/css/header.css
+++ b/static/css/header.css
@@ -20,7 +20,8 @@ header {
 #header_wrap #header_box {
     /* background-color: rgb(240, 240, 240); */
     /* background-color: rgba(200, 0, 20, 0.03); */
-    background-color: rgb(255, 245, 245);
+    /* background-color: rgb(255, 245, 245); */
+    background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
     display: flex;
     width: 100%;
     height: 70px;
@@ -98,11 +99,8 @@ header {
 #header_wrap #header_box #header_box_area #header_btn {
     width: 60px;
     margin: auto 0;
-    /* top: -55px; */
-    top: -68px;
-    /* left: 700px; */
     left: 85%;
-    position: relative;
+    position: absolute;
     filter: opacity(0.7);
 }
 
