--- a/static/css/header.css
+++ b/static/css/header.css
@@ -99,6 +99,7 @@ header {
 #header_wrap #header_box #header_box_area #header_btn {
     width: 60px;
     margin: auto 0;
+    top: 0;
     left: 85%;
     position: absolute;
     filter: opacity(0.7);
@@ -109,7 +110,6 @@ header {
     width: 60px;
     height: 60px;
     border-radius: 30px;
-    background-color: rgba(255,255,255,1);
     padding: 5px;
     margin-top: 4px;
     transition: 300ms;
@@ -125,7 +125,7 @@ header {
     padding: 5px;
     transition: 300ms;
 }
-#header_wrap #header_box #header_box_area #header_btn a #menu_btn img:hover {
+#header_wrap #header_box #header_box_area #header_btn a #menu_btn:hover {
     background-color: rgba(160, 30, 50, 0.2);
 }
 
