no canvas outline

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -127,3 +127,8 @@ a {
 .en {
     display: none;
 }
+
+canvas {
+    outline: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
+  }
