--- a/static/css/main.css
+++ b/static/css/main.css
@@ -60,8 +60,8 @@
 
 .header_logo {
     position: absolute;
-    left: 45%;
-    width: 20vw;
+    left: 42.5%;
+    width: 20%;
     height: 40px;
     cursor: pointer;
 }
