--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,12 +84,18 @@
     right: 0;
 }
 .cheon {
+    width: 100%;
+    height: 100%;
     background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / cover;
 }
 .du {
+    width: 100%;
+    height: 100%;
     background: url('https://cdd-ddc.org/static/img/index_bg_du.svg') no-repeat center center / cover;
 }
 .dong {
+    width: 100%;
+    height: 100%;
     background: url('https://cdd-ddc.org/static/img/index_bg_dong.svg') no-repeat center center / cover;
 }
 
