--- a/static/css/all.css
+++ b/static/css/all.css
@@ -89,7 +89,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     /* background-color: rgb(240, 240, 240); */
-    background-color: rgb(255, 245, 245);
+    /* background-color: rgb(255, 245, 245); */
     margin: 0;
     overflow-x: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
