--- a/static/css/header.css
+++ b/static/css/header.css
@@ -214,7 +214,8 @@ header {
     top: 0;
     left: 0;
     /* margin-top: 140px; */
-    padding-top: 140px;
+    /* padding-top: 140px; */
+    padding-top: 70px;
 
     /* display: none; */
 
