--- a/static/css/main.css
+++ b/static/css/main.css
@@ -658,6 +658,9 @@
     .header_logo_letter.center .en {
         right: -30%;
     }
+    .header_logo_letter.right .en {
+        right: -30%;
+    }
 
     .cheon {
         background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / 70%;
