--- a/static/css/main.css
+++ b/static/css/main.css
@@ -661,6 +661,9 @@
     .header_logo_letter.right .en {
         right: -30%;
     } */
+    .header_logo_letter.right_mobile {
+        right: 10%;
+    }
 
     .cheon {
         background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / 70%;
